# accelerator-test

./: .gitignore  AWS-SETUP-GUIDE.md  Cargo.toml  LATENCY-CALCULATION.md  MANUAL-DEPLOY.md  README.md  TESTING.md  frankfurt-config.json  results.json  test-binance-format.rs  tokyo-config.json
.kiro/specs/binance-latency-experiment/: design.md  ntp-setup.md  requirements.md  tasks.md  vpc-peering-guide.md
frankfurt-receiver/: Cargo.toml
frankfurt-receiver/src/: main.rs
scripts/: README.md  create-keypair.sh  debug-binance-stream.sh  deploy.sh  fix-frankfurt-key.sh  setup-ec2.sh  setup-ntp.sh  setup-vpc-peering.sh  setup-vpc.sh  teardown.sh  test-aws-backbone.sh  test-comparison-quick.sh  test-comparison.sh  test-frankfurt-baseline.sh  test-tokyo-forwarder.sh  test-vpc-peering.sh
shared/src/: lib.rs
tokyo-forwarder/: Cargo.toml
tokyo-forwarder/src/: main.rs
