[workspace]
members = [
    "tokyo-forwarder",
    "frankfurt-receiver",
    "shared",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
