[package]
name = "tokyo-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
shared = { path = "../shared" }
futures-util = "0.3"
